# Openagent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  models.py  pyproject.toml
.github/workflows/: run_agent.yml
openagent_browser/: .env.example  pyproject.toml
openagent_browser/src/: execution_node.py  gemini_vision.py  graph.py  main.py  planner_node.py
src/: graph.py  main.py
tools/: planner.py  vision.py
