[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-browser"
version = "0.1.0"
description = "Open-source browser agent using Groq, Gemini, and Playwright"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.4.0",
    "google-generativeai>=0.5.0",
    "playwright>=1.40.0",
    "langgraph>=0.0.20",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tools*"]
