[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagent-browser"
version = "0.1.0"
description = "Open-source browser agent using Groq, Gemini, and Playwright"
requires-python = ">=3.10"
dependencies = [
    "groq",
    "google-generativeai",
    "playwright",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "Pillow"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
