[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-browser"
version = "0.1.0"
description = "Open-source browser agent using Groq, Gemini, and Playwright"
requires-python = ">=3.10"
dependencies = [
    "groq",
    "google-generativeai",
    "playwright",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "Pillow"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
