[project]
name = "openagent-browser"
version = "0.1.0"
description = "An open-source stateful browser agent using Groq, Gemini Vision, and Playwright"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.4.2",
    "google-generativeai>=0.5.4",
    "playwright>=1.44.0",
    "langgraph>=0.0.49",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
